# sep-2023-drf

./: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/Users/: models.py  serializer.py  urls.py  views.py
apps/auth/: urls.py
apps/auto_parks/: models.py  serializer.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_user.py  0003_alter_autoparkmodel_user.py  0004_remove_autoparkmodel_user.py
apps/cars/: choises.py  filters.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_rename_price_carmodel_seats_carmodel_chasis_and_more.py  0003_carmodel_engine.py  0004_carmodel_created_at_carmodel_updated_at.py  0005_carmodel_price.py  0006_remove_carmodel_chasis_remove_carmodel_engine_and_more.py  0007_carmodel_price.py  0008_carmodel_auto_park.py  0009_carmodel_chassis_alter_carmodel_auto_park_and_more.py  (+1 more)
apps/users/: managers.py  models.py  serializer.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/templates/: Recovery.html  register.html  spam.html  test_email.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0002_alter_carmodel_table.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py  permissions.py
core/dataclasses/: user_dataclass.py
core/enums/: regex_enum.py
core/services/: jwt_service.py  upload_avatar.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
(+32 files in other folders)
